# qe4pe

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
notebooks/: analysis.ipynb  modeling.Rmd  questionnaire.py
qe4pe/: __init__.py
qe4pe/commands/: cli.py  filter_wmt_data.py  process_task_data.py
src/commands/: cli.py  process_task_data.py
test/: test_data.py
